--- a/src/main/resources/templates/landingPageProduto.html
+++ b/src/main/resources/templates/landingPageProduto.html
@@ -104,7 +104,7 @@ nav ul li a:hover {
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item ml-auto">
-                    <a class="nav-link text-white" href="#">
+                    <a class="nav-link text-white" href="/carrinho">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                         </svg>
@@ -267,18 +267,10 @@ nav ul li a:hover {
                                     <button class="btn corButtonPadrao" type="submit">Detalhes</button>
                                 </form>
                                 <br>
-                               <!-- <button class="btn corButtonPadrao"
-                                th:data-produto-id="${produto.idProduto}"
-                                onclick="adicionarAoCarrinho(this)">Adicionar ao carrinho</button> -->
-
-
                                         <button class="btn corButtonPadrao"
                                             th:data-produto-id="${produto.idProduto}"
                                             th:data-imagem-principal="${'/'+imagem.url}" 
                                             onclick="adicionarAoCarrinho(this)">Adicionar ao carrinho</button>
-
-                                
-                                
 
                             </div>
                         </div>
@@ -414,7 +406,7 @@ function adicionarAoCarrinho(button) {
         if (produtoExistente.quantidade < estoqueProduto) {
             produtoExistente.quantidade++;
         } else {
-            alert('Quantidade máxima atingida para este produto.');
+            alert("Quantidade inválida. Estoque insuficiente!");
         }
     } else {
         carrinho.push({
@@ -427,11 +419,11 @@ function adicionarAoCarrinho(button) {
             estoque: estoqueProduto,
             imagemPrincipal: imagemPrincipal, 
         });
+        alert('Produto adicionado ao carrinho');
+
     }
 
     localStorage.setItem('carrinho', JSON.stringify(carrinho));
-
-    alert('Produto adicionado ao carrinho');
 
     quantidadeItensCarrinho = carrinho.reduce((total, item) => total + item.quantidade, 0);
     atualizarQuantidadeItensCarrinho();
