--- a/src/main/resources/templates/carrinhoCompras.html
+++ b/src/main/resources/templates/carrinhoCompras.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Winery:: Carrinho de Compras</title>
-    <link rel="shortcut icon" href="../static/imagens/faviconWinery.png" type="image/x-icon">
+    <link th:href="@{/imagens/faviconWinery.png}" rel="shortcut icon" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <style>
@@ -96,9 +96,7 @@
     </div>
 
     <div class="container" id="divEnderecoLogado">
-      <div class="row mt-2">
 
-      </div>
       <ul class="list-group mb-3" style="background-color: transparent; border: none !important;">
         <li class="list-group-item py-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
           <div class="row g-3" >
@@ -396,7 +394,7 @@
           <div class="row">
             <!--Grid column-->
             <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-                <img src="../static/imagens/logoWinery250x250new.png" width="150px" alt="Logo da Winery">
+                <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
   
               <p>
                 Alguma dúvida? A gente ajuda você! <br>
@@ -467,7 +465,7 @@
               <h5 class="text-white">Formas de Pagamento</h5>
   
               <ul class="list-unstyled mb-0">
-                <img src="../static/imagens/formaPagamento.webp"  width="200px" alt="">
+                <!-- <img src="../static/imagens/formaPagamento.webp"  width="200px" alt=""> -->
               </ul>
             </div>
             <!--Grid column-->
@@ -745,12 +743,10 @@ document.querySelectorAll('input[type="radio"]').forEach((radio) => {
   fetch('/verificar-sessao')
     .then(response => response.json())
     .then(data => {
-      if(callback(data)){
-        isSessionActive();
-      }
+      callback(data); // Chamar a função de callback com o resultado
     })
     .catch(error => {
-      console.error('Erro ao verificar a sessão:', error);
+      console.error("Erro ao verificar a sessão:", error);
       callback(false); // Tratar erros como sessão inativa
     });
 }
@@ -762,16 +758,13 @@ isSessionActive(function(sessionActive) {
   const tituloLogado = document.getElementById('endereco-logado');
 
   if (sessionActive) {
-    // Sessão ativa, exibir bloco "endereco-logado" e ocultar "endereco-nao-logado"
     enderecoLogado.style.display = 'block';
     enderecoNaoLogado.style.display = 'none';
     tituloNaoLogado.style.display = 'none';
     tituloLogado.style.display = 'block';
 
   } else {
-    // Sessão inativa, ocultar bloco "endereco-logado" e exibir "endereco-nao-logado"
     enderecoLogado.style.display = 'none';
-    enderecoNaoLogado.style.display = 'block';
     tituloNaoLogado.style.display = 'block';
     tituloLogado.style.display = 'none';
 
